Index page: html, text

--- a/source/dev/_/blocks/footer/footer.pug
+++ b/source/dev/_/blocks/footer/footer.pug
@@ -1,5 +1,65 @@
 include ../../sys/pug/vars
 
 footer.footer
-	.case
-		
+	.footer__top
+		.case
+			.footer__top-wrap.row
+				.footer__company
+					a.footer__logo(href="")
+						img(src="" alt="")
+					.footer__desc Механизированная штукатурка #[br]и черновая отделка в Москве и МО
+				.footer__address.contact
+					.contact__head
+						.contact__icon
+						.contact__title ОФИС
+					.contact__value ул. Инструментальная, д.3 
+				.footer__links.links
+					ul
+						li
+							a(href="") Вызвать замерщика
+						li
+							a(href="") Калькулятор стоимости
+
+				.footer__contacts
+					.footer__phone.phone #[a(href="tel:+74951197437") +7 (495) 119-74-37]
+					.footer__time.time Ежедневно 07:00–22:00
+				a.footer__callback.btn.--sm.--bg-gray(href="") Заказать звонок
+	.footer__mid
+		.case
+			.footer__mid-wrap.row
+				.footer__navs.row
+					.footer__nav
+						ul
+							li
+								a(href="") Механизированная штукатурка
+							li
+								a(href="") Стяжка пола
+							li
+								a(href="") Наши работы
+					.footer__nav
+						ul
+							li
+								a(href="") Отзывы
+							li
+								a(href="") О компании
+							li
+								a(href="") Статьи
+					.footer__nav
+						ul
+							li
+								a(href="") Строительным компаниям
+							li
+								a(href="") Вакансии
+							li
+								a(href="") Контакты
+				.footer__policy
+					.footer__policy-link #[a(href="") Политика конфиденциальности]
+					.footer__policy-text Копирование элементов сайта #[br]запрещено. Закон РФ "Об авторском #[br]праве и смежных правах"
+				a.footer__dev.dev(href="" target="_blank")
+					.dev__logo
+						img(src="" alt="")
+					.dev__title Агентство интернет-маркетинга
+	.footer__bot
+		.case
+			.footer__bot-wrap.row
+				.footer__copy (С) ПетроСтрой 2021. Все права защищены. Данный сайт носит информационно-справочный характер и не при каких условиях не является публичной офертой. #[br]Оставляя заявку на данном сайте на кнопку, вы даете согласие на обработку своих персональных данных и соглашаетесь с политикой 
