Index add links

--- a/source/dev/_/blocks/footer/footer.pug
+++ b/source/dev/_/blocks/footer/footer.pug
@@ -5,7 +5,7 @@ footer.footer
 		.case
 			.footer__top-wrap.row
 				.footer__company
-					a.footer__logo(href="")
+					a.footer__logo(href="index.html")
 						img(src="" alt="")
 					.footer__desc Механизированная штукатурка #[br]и черновая отделка в Москве и МО
 				.footer__address.contact
