--- a/source/dev/_/blocks/header/header.pug
+++ b/source/dev/_/blocks/header/header.pug
@@ -3,26 +3,26 @@ include ../../sys/pug/vars
 header.header
 	.case
 		.header__panel.panel
-			a.panel__logo(href="")
+			a.panel__logo(href="index.html")
 				img(src="" alt="")
 			.panel__nav
 				ul
 					li
-						a(href="") ГЛАВНАЯ
+						a(href="index.html") ГЛАВНАЯ
 					li
-						a(href="") НАШИ РАБОТЫ
+						a(href="portfolio.html") НАШИ РАБОТЫ
 					li
-						a(href="") ОТЗЫВЫ
+						a(href="reviews.html") ОТЗЫВЫ
 					li
-						a(href="") О КОМПАНИИ
+						a(href="about-us.html") О КОМПАНИИ
 					li
-						a(href="") СТАТЬИ
+						a(href="article.html") СТАТЬИ
 					li
-						a(href="") СТРОИТЕЛЬНЫМ КОМПАНИЯМ
+						a(href="partnership.html") СТРОИТЕЛЬНЫМ КОМПАНИЯМ
 					li
-						a(href="") ВАКАНСИИ
+						a(href="job.html") ВАКАНСИИ
 					li
-						a(href="") КОНТАКТЫ
+						a(href="contacts.html") КОНТАКТЫ
 		.header__inner
 			.header__ya.ya
 				.ya__head.row
