--- a/source/dev/_/sys/pug/mixins/breadcrumbs.pug
+++ b/source/dev/_/sys/pug/mixins/breadcrumbs.pug
@@ -1,6 +1,6 @@
-mixin breadcrumbs()
+mixin breadcrumbs(classes)
 	if (breadcrumbs)
-		.page__breadcrumbs.breadcrumbs
+		div(class=classes + ' breadcrumbs')
 			.breadcrumbs__list(itemscope itemtype="http://schema.org/BreadcrumbList")
 				- var position = 1
 				each item in breadcrumbs
