--- a/source/dev/_/parts/allinc.pug
+++ b/source/dev/_/parts/allinc.pug
@@ -28,4 +28,4 @@
 				.allinc__name Нанесение #[br]штукатурки
 				.allinc__value 08
 		.allinc__img
-			img(src="" alt="")
+			img(src="_/uploads/worker.png" alt="")
