--- a/source/dev/_/components/input/input.sass
+++ b/source/dev/_/components/input/input.sass
@@ -6,8 +6,36 @@
 	&__area
 		width: 100%
 		font-family: $ffMain
-		color: #fff
+		color: $black
 		background-color: transparent
 		&::placeholder
-			opacity: 0.5
-			color: #fff
+			opacity: 0.8
+			color: $black
+	&__icon
+		position: absolute
+		top: 50%
+		right: 30px
+		width: 12px
+		font-size: 0
+		transform: translateY(-50%)
+
+	&.--md
+		.input
+			&__area
+				height: 68px
+				padding-left: 29px
+				padding-right: 29px
+	&.--icon
+		.input
+			&__area
+				padding-right: 55px
+	&.--bg-gray
+		.input
+			&__area
+				border-radius: 5px
+				background-color: #f4f4f4
+				box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.05)
+			&__icon
+				svg
+					path
+						opacity: 0.2
